--- a/Index.html
+++ b/Index.html
@@ -1,10 +1,45 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Hello Coursera!</title>
+        <meta charset="utf-8">
+        <title>Our Menu!</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">      
     </head>
     <body>
-        <h1>Hello Coursera!</h1>
-        <h2>Hi Coursera!</h2>
+        <h1>Our Menu!</h1>
+
+        <div class="col-lg-4 col-md-6 col-sm-12">
+            <section>
+                <h2 id="chicken">Chicken</h2>
+                <ul>
+                    <li>Balsamic Roasted Brussels Sprouts, Butternut Squash and Chicken Thighs</li>
+                    <li>Balsamic Roasted Brussels Sprouts, Butternut Squash and Chicken Thighs</li>
+                </ul>
+            </section>
+        </div>
+
+        <div class="col-lg-4 col-md-6 col-sm-12">
+            <section>
+                <h2 id="pork">Pork</h2>
+                <ul>
+                    <li>Balsamic Roasted Brussels Sprouts, Butternut Squash and Chicken Thighs</li>
+                    <li>Balsamic Roasted Brussels Sprouts, Butternut Squash and Chicken Thighs</li>
+                </ul>
+            </section>
+        </div>
+
+        <div class="col-lg-4 col-md-12 col-sm-12">
+            <section>
+                <h2 id="steak">Steak</h2>
+                <ul>
+                    <li>Balsamic Roasted Brussels Sprouts, Butternut Squash and Chicken Thighs</li>
+                    <li>Balsamic Roasted Brussels Sprouts, Butternut Squash and Chicken Thighs</li>
+                </ul>
+            </section>
+        </div>
     </body>
 </html>
