--- a/Index.html
+++ b/Index.html
@@ -18,6 +18,7 @@
                 <ul>
                     <li>Balsamic Roasted Brussels Sprouts, Butternut Squash and Chicken Thighs</li>
                     <li>Balsamic Roasted Brussels Sprouts, Butternut Squash and Chicken Thighs</li>
+                    <li>Balsamic Roasted Brussels Sprouts, Butternut Squash and Chicken Thighs</li>
                 </ul>
             </section>
         </div>
@@ -28,6 +29,7 @@
                 <ul>
                     <li>Balsamic Roasted Brussels Sprouts, Butternut Squash and Chicken Thighs</li>
                     <li>Balsamic Roasted Brussels Sprouts, Butternut Squash and Chicken Thighs</li>
+                    <li>Balsamic Roasted Brussels Sprouts, Butternut Squash and Chicken Thighs</li>
                 </ul>
             </section>
         </div>
@@ -36,6 +38,7 @@
             <section>
                 <h2 id="steak">Steak</h2>
                 <ul>
+                    <li>Balsamic Roasted Brussels Sprouts, Butternut Squash and Chicken Thighs</li>
                     <li>Balsamic Roasted Brussels Sprouts, Butternut Squash and Chicken Thighs</li>
                     <li>Balsamic Roasted Brussels Sprouts, Butternut Squash and Chicken Thighs</li>
                 </ul>
