--- a/Index.html
+++ b/Index.html
@@ -7,38 +7,49 @@
         <link rel="stylesheet" href="style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">      
+        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital@1&family=Source+Sans+3&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1>Our Menu!</h1>
+        <h1>The CSS Cafe</h1>
 
         <div class="col-lg-4 col-md-6 col-sm-12">
             <section>
-                <h2 id="chicken">Chicken</h2>
+                <h2 id="coffee">Coffee Menu</h2>
                 <ul>
-                    <li>Balsamic Roasted Brussels Sprouts, Butternut Squash and Chicken Thighs</li>
-                    <li>Balsamic Roasted Brussels Sprouts, Butternut Squash and Chicken Thighs</li>
+                    <li>Espresso</li>
+                    <li>Double Espresso</li>
+                    <li>Cafe Latte</li>
+                    <li>Americano</li>
+                    <li>Cappuccino</li>
+                    <li>Macchiato</li>
                 </ul>
             </section>
         </div>
 
         <div class="col-lg-4 col-md-6 col-sm-12">
             <section>
-                <h2 id="pork">Pork</h2>
+                <h2 id="non-coffee">Non-Coffee Menu</h2>
                 <ul>
-                    <li>Balsamic Roasted Brussels Sprouts, Butternut Squash and Chicken Thighs</li>
-                    <li>Balsamic Roasted Brussels Sprouts, Butternut Squash and Chicken Thighs</li>
+                    <li>Green Tea</li>
+                    <li>Hazelnut Mocha</li>
+                    <li>Matcha Cream</li>
+                    <li>Lemon Tea</li>
+                    <li>Avocado Juice</li>
+                    <li>Red Velvet</li>
                 </ul>
             </section>
         </div>
 
         <div class="col-lg-4 col-md-12 col-sm-12">
             <section>
-                <h2 id="steak">Steak</h2>
+                <h2 id="smoothies">Smoothies Menu</h2>
                 <ul>
-                    <li>Balsamic Roasted Brussels Sprouts, Butternut Squash and Chicken Thighs</li>
-                    <li>Balsamic Roasted Brussels Sprouts, Butternut Squash and Chicken Thighs</li>
-                    <li>Balsamic Roasted Brussels Sprouts, Butternut Squash and Chicken Thighs</li>
+                    <li>Pink Smoothie</li>
+                    <li>Banana Smoothie</li>
+                    <li>Pineapple Smoothie</li>
+                    <li>Apple Smoothie</li>
+                    <li>Berry Smoothie</li>
+                    <li>Strawberry Smoothie</li>
                 </ul>
             </section>
         </div>
